Fix vertical spacing on header

--- a/app/views/app-header/styles.styl
+++ b/app/views/app-header/styles.styl
@@ -5,7 +5,6 @@
   border-bottom 1px solid darkMuted
 
 .app-brand-container
-  padding 3rem _
   img
     display block
     block-align center
@@ -44,9 +43,7 @@
 @media screen-s-up
   .app-brand-container
     border-right 1px solid gray
-    //padding-right grid-column-gutter-width !important
-    // adjust
-    //padding-top 0
-    //  new
+  img
+    width gd(4)
   .app-navbar
     padding-left 0!important
